--- a/lib/selectize-0.8.5/css/selectize.legacy.css
+++ b/lib/selectize-0.8.5/css/selectize.legacy.css
@@ -1,5 +1,5 @@
 /**
- * selectize.default.css (v0.8.4) - Default Theme
+ * selectize.legacy.css (v0.8.5) - Default Theme
  * Copyright (c) 2013 Brian Reavis & contributors
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this
@@ -35,7 +35,7 @@
 
 .selectize-dropdown-header {
   position: relative;
-  padding: 5px 8px;
+  padding: 7px 10px;
   background: #f8f8f8;
   border-bottom: 1px solid #d0d0d0;
   -webkit-border-radius: 3px 3px 0 0;
@@ -46,7 +46,7 @@
 .selectize-dropdown-header-close {
   position: absolute;
   top: 50%;
-  right: 8px;
+  right: 10px;
   margin-top: -12px;
   font-size: 20px !important;
   line-height: 20px;
@@ -91,14 +91,14 @@
   bottom: 0;
   display: inline-block;
   width: 17px;
-  padding: 2px 0 0 0;
+  padding: 1px 0 0 0;
   font-size: 12px;
   font-weight: bold;
   color: inherit;
   text-align: center;
   text-decoration: none;
   vertical-align: middle;
-  border-left: 1px solid #0073bb;
+  border-left: 1px solid #74b21e;
   -webkit-border-radius: 0 2px 2px 0;
      -moz-border-radius: 0 2px 2px 0;
           border-radius: 0 2px 2px 0;
@@ -112,7 +112,7 @@
 }
 
 .selectize-control.plugin-remove_button [data-value].active .remove {
-  border-left-color: #00578d;
+  border-left-color: #6f9839;
 }
 
 .selectize-control.plugin-remove_button .disabled [data-value] .remove:hover {
@@ -120,7 +120,7 @@
 }
 
 .selectize-control.plugin-remove_button .disabled [data-value] .remove {
-  border-left-color: #aaaaaa;
+  border-left-color: #b4b4b4;
 }
 
 .selectize-control {
@@ -133,7 +133,7 @@
   font-family: inherit;
   font-size: 13px;
   -webkit-font-smoothing: inherit;
-  line-height: 18px;
+  line-height: 20px;
   color: #303030;
 }
 
@@ -149,7 +149,7 @@
   z-index: 1;
   display: inline-block;
   width: 100%;
-  padding: 8px 8px;
+  padding: 10px 10px;
   overflow: hidden;
   border: 1px solid #d0d0d0;
   -webkit-border-radius: 3px;
@@ -163,11 +163,11 @@
 }
 
 .selectize-control.multi .selectize-input.has-items {
-  padding: 5px 8px 2px;
+  padding: 8px 10px 4px;
 }
 
 .selectize-input.full {
-  background-color: #ffffff;
+  background-color: #f2f2f2;
 }
 
 .selectize-input.disabled,
@@ -195,25 +195,25 @@
 }
 
 .selectize-control.multi .selectize-input > div {
-  padding: 2px 6px;
-  margin: 0 3px 3px 0;
-  color: #ffffff;
+  padding: 1px 5px;
+  margin: 0 4px 4px 0;
+  color: #3d5d18;
   cursor: pointer;
-  background: #1da7ee;
-  border: 1px solid #0073bb;
+  background: #b8e76f;
+  border: 1px solid #74b21e;
 }
 
 .selectize-control.multi .selectize-input > div.active {
-  color: #ffffff;
+  color: #303030;
   background: #92c836;
-  border: 1px solid #00578d;
+  border: 1px solid #6f9839;
 }
 
 .selectize-control.multi .selectize-input.disabled > div,
 .selectize-control.multi .selectize-input.disabled > div.active {
-  color: #ffffff;
-  background: #d2d2d2;
-  border: 1px solid #aaaaaa;
+  color: #878787;
+  background: #f8f8f8;
+  border: 1px solid #b4b4b4;
 }
 
 .selectize-input > input {
@@ -221,7 +221,7 @@
   max-height: none !important;
   min-height: 0 !important;
   padding: 0 !important;
-  margin: 0 1px !important;
+  margin: 0 2px 0 0 !important;
   line-height: inherit !important;
   text-indent: 0 !important;
   background: none !important;
@@ -275,7 +275,7 @@
 }
 
 .selectize-dropdown [data-selectable] .highlight {
-  background: rgba(125, 168, 208, 0.2);
+  background: rgba(255, 237, 40, 0.4);
   -webkit-border-radius: 1px;
      -moz-border-radius: 1px;
           border-radius: 1px;
@@ -283,7 +283,7 @@
 
 .selectize-dropdown [data-selectable],
 .selectize-dropdown .optgroup-header {
-  padding: 5px 8px;
+  padding: 7px 10px;
 }
 
 .selectize-dropdown .optgroup:first-child .optgroup-header {
@@ -293,16 +293,16 @@
 .selectize-dropdown .optgroup-header {
   color: #303030;
   cursor: default;
-  background: #ffffff;
+  background: #f8f8f8;
 }
 
 .selectize-dropdown .active {
-  color: #495c68;
-  background-color: #f5fafd;
+  color: #303030;
+  background-color: #fffceb;
 }
 
 .selectize-dropdown .active.create {
-  color: #495c68;
+  color: #303030;
 }
 
 .selectize-dropdown .create {
@@ -359,67 +359,45 @@
   opacity: 0.5;
 }
 
-.selectize-control.multi .selectize-input.has-items {
-  padding-right: 5px;
-  padding-left: 5px;
-}
-
-.selectize-control.multi .selectize-input.disabled [data-value] {
-  color: #999;
-  text-shadow: none;
-  background: none;
-  -webkit-box-shadow: none;
-          box-shadow: none;
-}
-
-.selectize-control.multi .selectize-input.disabled [data-value],
-.selectize-control.multi .selectize-input.disabled [data-value] .remove {
-  border-color: #e6e6e6;
-}
-
-.selectize-control.multi .selectize-input.disabled [data-value] .remove {
-  background: none;
-}
-
 .selectize-control.multi .selectize-input [data-value] {
-  text-shadow: 0 1px 0 rgba(0, 51, 83, 0.3);
-  background-color: #1b9dec;
-  background-image: -moz-linear-gradient(top, #1da7ee, #178ee9);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#1da7ee), to(#178ee9));
-  background-image: -webkit-linear-gradient(top, #1da7ee, #178ee9);
-  background-image: -o-linear-gradient(top, #1da7ee, #178ee9);
-  background-image: linear-gradient(to bottom, #1da7ee, #178ee9);
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
+  background-color: #b2e567;
+  background-image: -moz-linear-gradient(top, #b8e76f, #a9e25c);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#b8e76f), to(#a9e25c));
+  background-image: -webkit-linear-gradient(top, #b8e76f, #a9e25c);
+  background-image: -o-linear-gradient(top, #b8e76f, #a9e25c);
+  background-image: linear-gradient(to bottom, #b8e76f, #a9e25c);
   background-repeat: repeat-x;
   -webkit-border-radius: 3px;
      -moz-border-radius: 3px;
           border-radius: 3px;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff1da7ee', endColorstr='#ff178ee9', GradientType=0);
-  -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2), inset 0 1px rgba(255, 255, 255, 0.03);
-          box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2), inset 0 1px rgba(255, 255, 255, 0.03);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffb8e76f', endColorstr='#ffa9e25c', GradientType=0);
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 }
 
 .selectize-control.multi .selectize-input [data-value].active {
-  background-color: #0085d4;
-  background-image: -moz-linear-gradient(top, #008fd8, #0075cf);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#008fd8), to(#0075cf));
-  background-image: -webkit-linear-gradient(top, #008fd8, #0075cf);
-  background-image: -o-linear-gradient(top, #008fd8, #0075cf);
-  background-image: linear-gradient(to bottom, #008fd8, #0075cf);
+  background-color: #88c332;
+  background-image: -moz-linear-gradient(top, #92c836, #7abc2c);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#92c836), to(#7abc2c));
+  background-image: -webkit-linear-gradient(top, #92c836, #7abc2c);
+  background-image: -o-linear-gradient(top, #92c836, #7abc2c);
+  background-image: linear-gradient(to bottom, #92c836, #7abc2c);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff008fd8', endColorstr='#ff0075cf', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff92c836', endColorstr='#ff7abc2c', GradientType=0);
 }
 
 .selectize-control.single .selectize-input {
-  background-color: #f9f9f9;
-  background-image: -moz-linear-gradient(top, #fefefe, #f2f2f2);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fefefe), to(#f2f2f2));
-  background-image: -webkit-linear-gradient(top, #fefefe, #f2f2f2);
-  background-image: -o-linear-gradient(top, #fefefe, #f2f2f2);
-  background-image: linear-gradient(to bottom, #fefefe, #f2f2f2);
+  background-color: #f3f3f3;
+  background-image: -moz-linear-gradient(top, #f5f5f5, #efefef);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f5f5f5), to(#efefef));
+  background-image: -webkit-linear-gradient(top, #f5f5f5, #efefef);
+  background-image: -o-linear-gradient(top, #f5f5f5, #efefef);
+  background-image: linear-gradient(to bottom, #f5f5f5, #efefef);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fffefefe', endColorstr='#fff2f2f2', GradientType=0);
-  -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.05), inset 0 1px 0 rgba(255, 255, 255, 0.8);
-          box-shadow: 0 1px 0 rgba(0, 0, 0, 0.05), inset 0 1px 0 rgba(255, 255, 255, 0.8);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#ffefefef', GradientType=0);
+  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.8), 0 2px 0 #e0e0e0, 0 3px 0 #c8c8c8, 0 4px 1px rgba(0, 0, 0, 0.1);
+          box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.8), 0 2px 0 #e0e0e0, 0 3px 0 #c8c8c8, 0 4px 1px rgba(0, 0, 0, 0.1);
 }
 
 .selectize-control.single .selectize-input,
@@ -428,15 +406,8 @@
 }
 
 .selectize-dropdown .optgroup-header {
-  padding-top: 7px;
-  font-size: 0.85em;
+  font-size: 0.8em;
   font-weight: bold;
-}
-
-.selectize-dropdown .optgroup {
   border-top: 1px solid #f0f0f0;
-}
-
-.selectize-dropdown .optgroup:first-child {
-  border-top: 0 none;
+  border-bottom: 1px solid #f0f0f0;
 }
